# pytest-jubilant

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  main.py  plugin.py  pyproject.toml  tox.ini
.github/: .sbomber-manifest.yaml  dependabot.yaml
.github/workflows/: build-and-publish.yaml  build.yaml  dependency-review.yaml  integration.yaml  publish.yaml  quality_checks.yaml  sbom-secscan.yaml  tiobe.yaml  zizmor.yaml
pytest_jubilant/: __init__.py  _main.py  main.py  version.py
tests/: conftest.py  test_jdl_dir.py  test_multimodel.py  test_multiplatform_build.py  test_rootmodel.py  test_smoke.py  typecheck.py
tests/integration/: conftest.py  dump_logs_tests_fail.py  dump_logs_tests_pass.py  test_dump_logs.py  test_juju_factory.py  test_pack.py
tests/integration/charms/log-actions/: charmcraft.yaml
tests/integration/charms/log-actions/src/: charm.py
tests/integration/charms/simple/: charmcraft.yaml  pyproject.toml
tests/integration/charms/simple/src/: charm.py
tests/unit/: cli_cloud_tests.py  cli_controller_tests.py  cli_markers_tests.py  cli_model_tests_already_exists.py  cli_model_tests_other_cli_error.py  cli_skip_on_failure_isolated_tests.py  cli_skip_on_failure_tests.py  conftest.py  test_arch_constraint.py  test_cli_dump_logs.py  test_cli_markers.py  test_cli_model.py  test_cli_skip_on_failure.py  test_jdl_dir.py  test_multicontroller.py  test_multimodel.py  test_multiplatform_build.py  test_rootmodel.py  test_terminal_summary.py
