[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-jubilant"
dynamic = ["version"]

description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"  # lower bound set by jubilant
dependencies = [
    "jubilant>=1,<2",
    "pytest>=8.3.5",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"

[dependency-groups]
lint = [
    "pyright",
    "ruff",
]
unit = [
    "coverage[toml]",
    "pytest",
]
integration = [
    "coverage[toml]",
    "pytest",
    "ops>=2,<4",
]

[tool.setuptools.dynamic]
version = {attr = "pytest_jubilant._version.__version__"}

[project.urls]
Homepage = "https://github.com/canonical/pytest-jubilant"
Issues = "https://github.com/canonical/pytest-jubilant/issues"

[project.entry-points.pytest11]
pytest-jubilant = "pytest_jubilant._main"

[tool.pytest.ini_options]
# Promote warnings (deprecations, resource-cleanup leaks, etc.) to errors so
# they surface in CI rather than going unnoticed.
filterwarnings = [
    "error",
]

[tool.ruff]
line-length = 99
target-version = "py38"

[tool.ruff.lint]
select = [
    "F",  # Pyflakes
    "E",  # Pycodestyle errors
    "W",  # Pycodestyle warnings
    "I001",  # isort
    "N",  # pep8-naming
    "A",  # flake8-builtins
    "CPY",  # flake8-copyright
    "UP",  # pyupgrade
    "YTT",  # flake8-2020
    "S",  # flake8-bandit
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # Ruff specific
    "PERF",  # Perflint
    "FA",  # flake8-future-annotations
    "TC",  # flake8-type-checking
    "D",  # pyflakes-docstrings
]
ignore = [
    "D203",  # 1 blank line before class docstring; incompatible with D211 (no blank line before class docstring)
    "D213",  # newline after opening """ in multi-line docstring; incompatible with D212 (no newline after """)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "CPY",  # Copyright headers
    "D",  # Documentation
    "S101",  # Asserts
    "B018",  # "Useless" expressions
    "SIM117",  # FIXME: use single with statement for multiple context managers
]
"pytest_jubilant/__init__.py" = [
    "D400",  # First line should end with a period!
]
"pytest_jubilant/_main.py" = [
    "E501",  # FIXME: line too long
    "LOG015",  # FIXME: don't log from the root logger
    "RUF003",  # FIXME: ambiguous character '❯'
    "S404",  # subprocess module, core functionality for this lib
    "S603",  # FIXME: construct charmcraft run command more statically
]
